--- a/package.json
+++ b/package.json
@@ -3,22 +3,40 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run serve:ssr",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run unbiased:serve-ssr",
+    "serve:ssr": "node dist/unbiased/server/main.js",
+    "build:ssr": "ng build --prod && ng run unbiased:server:production",
+    "prerender": "ng run unbiased:prerender",
+    "postinstall": "npm run build:ssr"
+  },
+  "engines": {
+    "node": "13.14.0",
+    "npm": "6.14.4"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.2.4",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.2.4",
     "@angular/compiler": "~10.2.4",
     "@angular/core": "~10.2.4",
     "@angular/forms": "~10.2.4",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
+    "@angular/platform-server": "~10.2.4",
     "@angular/router": "~10.2.4",
+    "@nguniversal/express-engine": "^10.1.0",
+    "bootstrap": "^4.6.0",
+    "express": "^4.15.2",
+    "jquery": "^3.6.0",
+    "ngx-quill": "^10.0.5",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -27,6 +45,8 @@
     "@angular-devkit/build-angular": "~0.1002.3",
     "@angular/cli": "~10.2.3",
     "@angular/compiler-cli": "~10.2.4",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
